# Eagle_Knights-Wiki

./: README.md  move_fwd.cpp
EKBot/ekbot_ctrl/: CMakeLists.txt  package.xml
EKBot/ekbot_ctrl/launch/: ros_autonomos.launch
EKBot/ekbot_description/: model.config  package.xml
Proyecto1/: CMakeLists.txt  README.md  README.txt  package.xml  proyecto1.cpp
Proyecto1/devel/: setup.sh
Proyecto1/devel/lib/pkgconfig/: Tarea01.pc  tarea01.pc
Proyecto1/jurteaga/: README.md
Proyecto1/jurteaga/devel/: .catkin  .rosinstall
Proyecto1/jurteaga/src/tarea01/: CMakeLists.txt  hello.cpp  package.xml  subpose.cpp  tarea01.cpp
Proyecto1/src/tarea01/: pubvel.cpp
Proyecto2/: .README.md.swp  README.md
Proyecto2/src/autonomos_simulation/: tf2_broadcaster_node.cpp  vision_node.cpp
Proyecto2/src/ekbot_ctrl/: robot_trajectory_node.cpp  robot_velocity_node.cpp  turtle_trajectory_node.cpp
Proyecto2/src/ekbot_description/: CMakeLists.txt  model.config
Proyecto2/src/ekbot_description/launch/: ekbot.world
Proyecto2/src/ekbot_description/sdf/: model.sdf
Proyecto2/src/ekbot_description/urdf/: ekbot.urdf
Proyecto2/src/ekbot_gazebo/: CMakeLists.txt  package.xml
Proyecto2/src/ekbot_gazebo/launch/: ekbot.launch
Proyecto2/src/ekbot_gazebo/models/: gazebo_plugin.cpp  gazebo_plugin.h
Proyecto2/src/ekbot_gazebo/worlds/: ekbot.world
Tarea_1/devel/: .catkin  .rosinstall  setup.sh
Tarea_1/devel/lib/agitr/: anon  count  hello  move_2  move_fwd  move_y_pose  once  pose3  pubvel  pubvel_toggle  pubvel_with_max  reverse_cmd_vel  set_bg_color  (+4 more)
Tarea_1/src/agitr/: CMakeLists.txt
(+5 files in other folders)
